--- a/infrastructure/ansible/templates/forest-community-blog.service.j2
+++ b/infrastructure/ansible/templates/forest-community-blog.service.j2
@@ -4,6 +4,7 @@ Description=Starts awesome blog
 [Service]
 ExecStart=/bin/sh -c "exec java -jar /root/forest_community_blog/server/app.jar"
 Type=simple
+EnvironmentFile=/etc/profile.d/forest-community-blog
 
 [Install]
 WantedBy=multi-user.target
